# uda

./: .flake8  .gitignore  .gitmodules  .mustache  README.md  dev-requirements.txt  justfile  noxfile.py  pyproject.toml  pyproject_sort.py  requirements-dev.txt  requirements.txt  setup.py
.github/: test-master.yml
.github/workflows/: lint-main.yml  publish-to-pypi.yml  test-main.yml  test-master.yml
docs/: dev.md
notebooks/: BatchNormDA.ipynb  CC_ss_unet2d.ipynb  CC_ss_unet3d.ipynb  Setup CC359.ipynb  Setup MAndMs.ipynb  data_analysis.ipynb  move_files.sh  playground.ipynb  playground.py  setup_cc359.ipynb  setup_ds.ipynb  test.ipynb  vae.ipynb
notebooks/data-notebooks/: setup_cc359.ipynb
scripts/: CC_ss_unet2d.py  CC_ss_unet3d.py  batch_norm.py  bottleneck.py  commons.py  cross_evaluate_run.py  delete_model_binaries.py  download_run_config.py  evaluate_run.py  evaluate_vae.py  evaluation.py  finetune.py  mlflow_gc.py  setup_cc359.py  setup_run_config.py  setup_unet_run.py  setup_vae_run.py  train_joint_model.py  train_unet.py  train_unet2d_calgary_campinas.py  train_vae.py  unet_CC359.py
src/uda/: __init__.py  calgary_campinas_dataset.py  config.py  hparams.py  losses.py  metrics.py  unet.py  unet3d.py  utils.py
src/uda/datasets/: configuration_cc359.py  dataset_cc359.py
src/uda/models/: __init__.py  architectures.py  backbones.py  configuration_unet.py  configuration_vae.py  modeling_unet.py  modeling_vae.py  modules.py
src/uda/unet/: __init__.py  backbones_unet.py  configuration_unet.py  modeling_unet.py
tests/: __init__.py  test_unet.py
uda/: __init__.py  config.py  hparams.py  losses.py  metrics.py  transforms.py  utils.py
uda/datasets/: __init__.py  base.py  configuration_cc359.py  configuration_mms.py  dataset_cc359.py  dataset_mms.py  dataset_teacher.py
uda/models/: __init__.py  architectures.py  configuration_unet.py  configuration_vae.py  modeling_unet.py  modeling_vae.py  modules.py
uda/trainer/: __init__.py  base.py  joint_training.py  output_transforms.py  segmentation_training.py  vae_training.py
uda_wandb/: __init__.py  config.py  delete.py  download.py  evaluation.py
wandb_utils/: __init__.py  config.py  delete.py  download.py
