[tool.poetry]
name = "uda"
version = "0.1.0"
description = "Unsupervised Domain Adaptation"
authors = ["Henri Iser <iserh.ml@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
apeer-ometiff-library = "^1.8.2"
gdown = "^4.4.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
nibabel = "^3.2.2"
numpy = "^1.22.3"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
seaborn-image = "^0.4.4"
torch = "^1.11.0"
torchsummaryX = "^1.3.0"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
docformatter = ">=1.3.1"
flake8 = ">=3.8.3"
flake8-annotations = ">=2.1.0"
flake8-bugbear = ">=20.1.4"
flake8-builtins = ">=1.5.3"
flake8-docstrings = ">=1.5.0"
flake8-isort = ">=3.0.0"
flake8-use-fstring = ">=1.1"
isort = ">=4.3.21"
nox = ">=2020.5.24"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
reindent = ">=3.5.1"
tomlkit = ">=0.7.0"
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest.ini_options]
addopts = "-v --cov --cov-report=html --cov-report=term"
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["uda"]
omit = ["**/__init__.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
